--- a/index.html
+++ b/index.html
@@ -11,8 +11,36 @@
     <body>
         <div class="container-fluid">
             <div class="row">
-                <header class="col-12 bg-warning text-center p-2">
-                    <span>header</span>
+                <header class="col-12 bg-warning p-2">
+                    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+                        <div class="container-fluid">
+                          <a class="navbar-brand" href="#">
+                              <img src="image/a-level-logo.png" alt="a-level">
+                          </a>
+                          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                          </button>
+                          <div class="collapse position-absolute top-50 start-50 translate-middle navbar-collapse" id="navbarText">
+                            <ul class="navbar-nav right me-auto mb-2 mb-lg-0">
+                              <li class="nav-item">
+                                <a class="nav-link" href="#">Item1</a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link" href="#">Item2</a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link" href="#">Item3</a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link" href="#">Item4</a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link" href="#">Item5</a>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </nav>
                 </header>
             </div>
         </div>
@@ -23,16 +51,79 @@
                         <p>aside</p>
                     </aside>
                 </div>
-                <div class="col-12 col-lg-8 order-md-1 order-lg-2 h-100">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam totam eaque corporis temporibus, maiores magnam animi cumque reiciendis? Esse cumque sequi iure mollitia pariatur perferendis earum corporis quibusdam repudiandae hic tenetur tempora inventore aut doloremque distinctio molestiae nam dolorum quae quia, natus culpa, autem illum! Labore quas laudantium accusantium, fuga pariatur excepturi soluta ipsam, rem earum quisquam optio nostrum eum quaerat! Vitae omnis porro excepturi alias quaerat rem, laudantium a.</p>
+                <div class="row col-12 col-lg-8 order-md-1 p-3 order-lg-2 h-100">
+                    <div class="card col-12 col-md-6 col-lg-4 h-25 text-center cards">
+                        <div class="card__photo">
+                            <img src="image/loading.jpg" class="card-img-top w-50 h-50" alt="loading">
+                        </div>
+                        <div class="card-body">
+                          <h5 class="card-title">Lorem, ipsum.</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card col-12 col-md-6 col-lg-4 h-25 text-center cards">
+                        <div class="card__photo">
+                            <img src="image/loading.jpg" class="card-img-top w-50 h-50" alt="loading">
+                        </div>
+                        <div class="card-body">
+                          <h5 class="card-title">Lorem, ipsum.</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card col-12 col-md-6 col-lg-4 h-25 text-center cards">
+                        <div class="card__photo">
+                            <img src="image/loading.jpg" class="card-img-top w-50 h-50" alt="loading">
+                        </div>
+                        <div class="card-body">
+                          <h5 class="card-title">Lorem, ipsum.</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card col-12 col-md-6 col-lg-4 h-25 text-center cards">
+                        <div class="card__photo">
+                            <img src="image/loading.jpg" class="card-img-top w-50 h-50" alt="loading">
+                        </div>
+                        <div class="card-body">
+                          <h5 class="card-title">Lorem, ipsum.</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card col-12 col-md-6 col-lg-4 h-25 text-center cards">
+                        <div class="card__photo">
+                            <img src="image/loading.jpg" class="card-img-top w-50 h-50" alt="loading">
+                        </div>
+                        <div class="card-body">
+                          <h5 class="card-title">Lorem, ipsum.</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card col-12 col-md-6 col-lg-4 h-25 text-center cards">
+                        <div class="card__photo">
+                            <img src="image/loading.jpg" class="card-img-top w-50 h-50" alt="loading">
+                        </div>
+                        <div class="card-body">
+                          <h5 class="card-title">Lorem, ipsum.</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>      
                 </div>
                 <div class="col-12 col-md-6 col-lg-2 order-md-3 order-lg-3 bg-info p-5">
                     <p>aside</p>
                 </div>
             </div>
         </div>
-        <footer class="footer text-center bg-success">
-            <span>footer</span>
+        <footer class="footer bottom-0 bg-success">
+            <div class="logo">
+                <img src="image/a-level-logo.png" alt="a-level">
+            </div>
         </footer>
+        <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     </body>
 </html>
